; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Set_Parent.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Tree.c_Tree_Set_Parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Tree = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Tree*, i64, i64)* @Tree_Set_Parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @Tree_Set_Parent(%struct.Tree* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct.Tree*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.Tree* %0, %struct.Tree** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.Tree*, %struct.Tree** %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i64 @Tree_Is_Red(%struct.Tree* %7, i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %3
  %12 = load i64, i64* %6, align 8
  %13 = or i64 %12, 1
  %14 = load i64, i64* %5, align 8
  %15 = inttoptr i64 %14 to i8*
  %16 = getelementptr inbounds i8, i8* %15, i64 16
  %17 = bitcast i8* %16 to i64*
  store i64 %13, i64* %17, align 8
  br label %24

18:                                               ; preds = %3
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* %5, align 8
  %21 = inttoptr i64 %20 to i8*
  %22 = getelementptr inbounds i8, i8* %21, i64 16
  %23 = bitcast i8* %22 to i64*
  store i64 %19, i64* %23, align 8
  br label %24

24:                                               ; preds = %18, %11
  ret void
}

declare dso_local i64 @Tree_Is_Red(%struct.Tree*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
